--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,6 @@ jobs:
         run: |
           docker login -u $DOCKERHUB_USER -p $DOCKERHUB_PASSWORD
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag test1
+       run: docker build . --file Dockerfile --tag nilstest1:$(date +%s)
 - name: DockerHub Build And Push
-      run: docker push ${{secrets.DOCKERHUB_USER}}/admin-tool
+       run: docker push ${{secrets.DOCKERHUB_USER}}/admin-tool
