--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vidijs",
+  "name": "@vidispine/admin-tool",
   "homepage": "https://vidispine.github.io/admin-tool",
   "version": "4.2.0",
   "private": true,
@@ -28,19 +28,13 @@
     "redux-form": "^8.3.7"
   },
   "scripts": {
-    "start": "REACT_APP_VIDISPINE_URL=$VIDISPINE_URL REACT_APP_GIT_COMMIT=`git rev-parse --short HEAD` react-scripts start",
-    "build": "REACT_APP_GIT_COMMIT=$npm_package_version react-scripts build",
-    "build-dev": "REACT_APP_GIT_COMMIT=`git rev-parse --short HEAD` react-scripts build",
-    "docker-build": "docker build -t ${npm_package_name}:${npm_package_version} .",
-    "docker-build-latest": "docker build -t ${npm_package_name}:latest .",
-    "docker-run": "docker run --name ${npm_package_name} --rm -dti -e VIDISPINE_URL=$VIDISPINE_URL -p 80:80 $npm_package_name:$npm_package_version",
-    "docker-run-latest": "docker run --name ${npm_package_name} --rm -dti -e VIDISPINE_URL=$VIDISPINE_URL -p 80:80 $npm_package_name:latest",
-    "docker-stop": "docker stop ${npm_package_name}",
-    "build-container": "export REACT_APP_GIT_COMMIT=$npm_package_version && react-scripts build && docker build -t \"${npm_package_name}:latest\" -t \"${npm_package_name}:${REACT_APP_GIT_COMMIT}\" .",
-    "build-container-dev": "export REACT_APP_GIT_COMMIT=`git rev-parse --short HEAD` && react-scripts build && docker build -t \"${npm_package_name}:latest\" -t \"${npm_package_name}:${REACT_APP_GIT_COMMIT}\" .",
-    "save-container": "export REACT_APP_GIT_COMMIT=$npm_package_version && docker image save -o vidijs_${REACT_APP_GIT_COMMIT}.tar.gz vidijs:$REACT_APP_GIT_COMMIT && echo \"Exported vidijs_${REACT_APP_GIT_COMMIT}.tar.gz\"",
-    "save-container-dev": "export REACT_APP_GIT_COMMIT=`git rev-parse --short HEAD` && docker image save -o vidijs_${REACT_APP_GIT_COMMIT}.tar.gz vidijs:$REACT_APP_GIT_COMMIT && echo \"Exported vidijs_${REACT_APP_GIT_COMMIT}.tar.gz\"",
-    "predeploy": "GENERATE_SOURCEMAP=false PUBLIC_URL=${npm_package_homepage} yarn build && cp build/index.html build/404.html",
+    "start": "REACT_APP_VIDISPINE_URL=${VIDISPINE_URL} REACT_APP_GIT_COMMIT=${npm_package_version} react-scripts start",
+    "build": "GENERATE_SOURCEMAP=false REACT_APP_GIT_COMMIT=${npm_package_version} react-scripts build && cp build/index.html build/404.html",
+    "docker:build": "docker build -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" .",
+    "docker:run": "docker run --name ${npm_package_name:1} --rm -dti -e VIDISPINE_URL=$VIDISPINE_URL -p 80:80 \"${npm_package_name:1}:${npm_package_version}\"",
+    "docker:push": "docker push \"${npm_package_name:1}:${npm_package_version}\" && docker push \"${npm_package_name:1}:latest\"",
+    "docker:stop": "docker stop ${npm_package_name:1}",
+    "predeploy": "PUBLIC_URL=${npm_package_homepage} yarn build",
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
