--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,10 +20,7 @@ jobs:
             */*/node_modules
           key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
       - name: Docker login
-        env: 
-          DOCKER_USER: ${{secrets.DOCKERHUB_USER}}
-          DOCKER_PASSWORD: ${{secrets.DOCKERHUB_PASSWORD}}
-        run: docker login -u $DOCKERHUB_USER -p $DOCKERHUB_PASSWORD
+        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USER }} --password-stdin
       - name: Install app dependencies
         if: steps.cache-modules.outputs.cache-hit != 'true'
         run: yarn install
