--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "5.0.0-pre.1",
   "private": true,
   "dependencies": {
+    "@fontsource/open-sans": "^4.5.2",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@vidispine/vdt-api": "^0.14.0",
