--- a/package.json
+++ b/package.json
@@ -1,32 +1,42 @@
 {
   "name": "@vidispine/admin-tool",
   "homepage": "https://vidispine.github.io/admin-tool",
-  "version": "5.0.0-pre.1",
+  "version": "5.1.0",
   "private": true,
   "dependencies": {
-    "@fontsource/open-sans": "^4.5.2",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@vidispine/vdt-api": "^0.14.0",
-    "clsx": "^1.1.1",
-    "codemirror": "^5.60.0",
-    "history": "^5.0.0",
-    "immutability-helper": "^3.1.1",
-    "lodash.startcase": "^4.4.0",
+    "@fontsource/open-sans": "4.5.2",
+    "@material-ui/core": "4.12.3",
+    "@material-ui/icons": "4.11.2",
+    "@vidispine/vdt-api": "21.3.0",
+    "clsx": "1.1.1",
+    "codemirror": "5.63.3",
+    "history": "5.1.0",
+    "immutability-helper": "3.1.1",
+    "lodash.startcase": "4.4.0",
     "material-ui-chip-input": "1.1.0",
-    "moment": "^2.29.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "moment": "2.29.1",
+    "react": "17.0.2",
     "react-codemirror": "1.0.0",
-    "react-cookie": "^4.0.3",
-    "react-dom": "^17.0.2",
-    "react-json-view": "^1.21.3",
-    "react-redux": "^7.2.3",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "^4.0.3",
-    "react-select": "^4.3.0",
-    "redux": "^4.0.5",
-    "redux-form": "^8.3.7"
+    "react-cookie": "4.1.1",
+    "react-dom": "17.0.2",
+    "react-json-view": "1.21.3",
+    "react-redux": "7.2.6",
+    "react-router-dom": "5.3.0",
+    "react-scripts": "4.0.3",
+    "react-select": "5.2.1",
+    "redux": "4.1.2",
+    "redux-form": "8.3.7"
+  },
+  "resolutions": {
+    "codemirror": "5.63.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "prop-types": "15.7.2",
+    "classnames": "2.3.1",
+    "lodash.debounce": "4.0.8",
+    "lodash.isequal": "4.5.0",
+    "create-react-class": "15.7.0",
+    "eslint": "7.11.0"
   },
   "scripts": {
     "start": "REACT_APP_VIDISPINE_URL=${VIDISPINE_URL} REACT_APP_GIT_COMMIT=${npm_package_version} react-scripts start",
@@ -42,12 +52,12 @@
   "devDependencies": {
     "eslint": "7.11.0",
     "eslint-config-airbnb": "18.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "gh-pages": "^3.2.3",
-    "http-proxy-middleware": "^1.1.0"
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "1.7.0",
+    "gh-pages": "3.2.3",
+    "http-proxy-middleware": "2.0.1"
   },
   "browserslist": [
     ">0.2%",
