--- a/package.json
+++ b/package.json
@@ -39,12 +39,24 @@
     "create-react-class": "15.7.0",
     "eslint": "7.11.0",
     "lodash": "4.17.21",
-    "set-value": "3.0.1",
+    "set-value": "4.0.1",
     "mixin-deep": "2.0.1",
     "immer": "9.0.6",
     "axios": "0.21.4",
     "tar": "6.1.9",
-    "url-parse": "1.5.2"
+    "url-parse": "1.5.2",
+    "ua-parser-js": "0.7.24",
+    "js-yaml": "3.14.1",
+    "kind-of": "6.0.3",
+    "dot-prop": "4.2.1",
+    "ini": "1.3.6",
+    "ssri": ">6.0.1",
+    "y18n": "4.0.1",
+    "websocket-extensions": "0.1.4",
+    "dns-packet": "1.3.2",
+    "http-proxy": "1.18.1",
+    "elliptic": "6.5.4",
+    "chokidar": "3.5.2"
   },
   "scripts": {
     "start": "REACT_APP_VIDISPINE_URL=${VIDISPINE_URL} REACT_APP_GIT_COMMIT=${npm_package_version} react-scripts start",
