--- a/package.json
+++ b/package.json
@@ -56,7 +56,13 @@
     "dns-packet": "1.3.2",
     "http-proxy": "1.18.1",
     "elliptic": "6.5.4",
-    "chokidar": "3.5.2"
+    "chokidar": "3.5.2",
+    "path-parse": ">=1.0.7",
+    "browserslist": ">=4.16.5",
+    "tmpl": ">=1.0.5",
+    "color-string": ">=1.5.5",
+    "ws": ">=7.4.6",
+    "hosted-git-info": ">=2.8.9"
   },
   "scripts": {
     "start": "REACT_APP_VIDISPINE_URL=${VIDISPINE_URL} REACT_APP_GIT_COMMIT=${npm_package_version} react-scripts start",
