--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Publish to GitHub Pages
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          PUBLIC_URL="https://${GITHUB_REPOSITORY%/*}.github.io${GITHUB_REPOSITORY#*/} yarn build
+          PUBLIC_URL="https://${GITHUB_REPOSITORY%/*}.github.io${GITHUB_REPOSITORY#*/}" yarn build
           yarn gh-pages -d build -u "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
