--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
   "extends": "airbnb",
-  "ecmaVersion": "latest",
+  "parserOptions": {
+    "ecmaVersion": 2021
+  },
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "react/prop-types": [2, { "skipUndeclared": true }],
