--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "node-forge": ">=1.3.0",
     "follow-redirects": ">=1.14.7",
     "http-signature": ">=1.3.6",
-    "ejs": ">=3.1.7"
+    "ejs": ">=3.1.7",
+    "shell-quote": ">=1.7.3"
   },
   "scripts": {
     "start": "REACT_APP_VIDISPINE_URL=${VIDISPINE_URL} REACT_APP_GIT_COMMIT=${npm_package_version} react-scripts start",
