--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "@vidispine/admin-tool",
   "version": "22.3.0",
   "private": true,
+  "author": "alex.jennings@vidispine.com",
+  "description": "VidiCore Admin Tool",
   "dependencies": {
     "@fontsource/open-sans": "4.5.2",
     "@material-ui/core": "4.12.3",
@@ -9,6 +11,7 @@
     "@vidispine/vdt-api": "21.3.0",
     "clsx": "1.1.1",
     "codemirror": "5.63.3",
+    "electron-is-dev": "^2.0.0",
     "history": "5.1.0",
     "immutability-helper": "3.1.1",
     "lodash.debounce": "4.0.8",
@@ -75,14 +78,23 @@
   },
   "scripts": {
     "start": "REACT_APP_VIDISPINE_URL=${VIDISPINE_URL} REACT_APP_GIT_COMMIT=${npm_package_version} react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false REACT_APP_GIT_COMMIT=${npm_package_version} react-scripts build && cp build/index.html build/404.html",
+    "build": "INLINE_RUNTIME_CHUNK=false GENERATE_SOURCEMAP=false REACT_APP_GIT_COMMIT=${npm_package_version} react-scripts build && cp build/index.html build/404.html",
     "predocker:build": "PUBLIC_URL=/ yarn build",
     "docker:build": "docker build -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" .",
     "docker:push": "docker push \"${npm_package_name:1}:${npm_package_version}\" && docker push \"${npm_package_name:1}:latest\"",
     "docker:run": "docker run --name \"${npm_package_name/@vidispine\\//vidispine_}\" --rm -dti -e VIDISPINE_URL=$VIDISPINE_URL -p 80:80 \"${npm_package_name:1}:${npm_package_version}\"",
-    "docker:stop": "docker stop \"${npm_package_name/@vidispine\\//vidispine_}\""
+    "docker:stop": "docker stop \"${npm_package_name/@vidispine\\//vidispine_}\"",
+    "dev": "concurrently -k \"yarn:dev:react\" \"yarn:dev:electron\"",
+    "dev:react": "BROWSER=none PORT=3000 yarn start",
+    "dev:electron": "wait-on tcp:3000 && electron .",
+    "postinstall": "electron-builder install-app-deps",
+    "pack-app": "yarn build && electron-builder --dir",
+    "pack-build": "electron-builder --dir"
   },
   "devDependencies": {
+    "concurrently": "^7.5.0",
+    "electron": "^21.2.0",
+    "electron-builder": "^23.6.0",
     "eslint": "7.11.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-plugin-import": "2.22.1",
@@ -90,12 +102,15 @@
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "1.7.0",
     "gh-pages": "3.2.3",
-    "http-proxy-middleware": "2.0.1"
+    "http-proxy-middleware": "2.0.1",
+    "wait-on": "^6.0.1"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "main": "public/electron.js",
+  "homepage": "./"
 }
