--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vidispine/admin-tool",
-  "version": "22.3.0",
+  "version": "22.3.0-pre.1",
   "private": true,
   "author": "alex.jennings@vidispine.com",
   "description": "VidiCore Admin Tool",
