--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "22.4.0",
   "private": true,
   "dependencies": {
+    "@devbookhq/splitter": "^1.3.2",
     "@fontsource/open-sans": "4.5.2",
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
