--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "@material-ui/icons": "4.11.2",
     "@vidispine/vdt-api": "21.3.0",
     "clsx": "1.1.1",
-    "codemirror": "5.63.3",
+    "codemirror": "5.65.9",
     "history": "5.1.0",
     "immutability-helper": "3.1.1",
+    "jshint": "^2.13.5",
     "lodash.debounce": "4.0.8",
     "lodash.startcase": "4.4.0",
     "material-ui-chip-input": "1.1.0",
@@ -29,7 +30,7 @@
     "redux-form": "8.3.7"
   },
   "resolutions": {
-    "codemirror": "5.63.3",
+    "codemirror": "5.65.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "eslint": "7.11.0",
