--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-scripts": "4.0.3",
     "react-select": "5.2.1",
     "redux": "4.1.2",
-    "redux-form": "8.3.7"
+    "redux-form": "8.3.7",
+    "stringify-object": "^5.0.0"
   },
   "resolutions": {
     "codemirror": "5.65.9",
