--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vidispine/vdt-api": "^23.1.0",
     "clsx": "1.1.1",
     "codemirror": "5.65.9",
+    "d3-graphviz": "2.6.1",
     "history": "5.1.0",
     "immutability-helper": "3.1.1",
     "jshint": "^2.13.5",
