Set artifact name based on commit and url

--- a/.github/workflows/build-with-public-url.yml
+++ b/.github/workflows/build-with-public-url.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: build
+          name: admin-tool_${{ github.sha }}_${{ github.event.inputs.public_url }}
           path: build
           retention-days: 1
