--- a/.github/workflows/build-with-public-url.yml
+++ b/.github/workflows/build-with-public-url.yml
@@ -14,6 +14,11 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
+      - name: Set artifact vars
+        id: artifact-vars
+        run: |
+          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          echo "encoded_url=$(node -p \"encodeURIComponent('${{ github.event.inputs.public_url }}')\")" >> $GITHUB_OUTPUT
       - name: Cache node_modules
         id: cache-modules
         uses: actions/cache@v2
@@ -32,6 +37,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: admin-tool_${{ github.sha }}_${{ github.event.inputs.public_url }}
+          name: admin-tool_${{ steps.artifact-vars.outputs.sha_short }}_${{ steps.artifact-vars.outputs.encoded_url }}
           path: build
           retention-days: 1
