--- a/.github/workflows/build-with-public-url.yml
+++ b/.github/workflows/build-with-public-url.yml
@@ -18,7 +18,7 @@ jobs:
         id: artifact-vars
         run: |
           echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-          echo "encoded_url=$(node -p \"encodeURIComponent('${{ github.event.inputs.public_url }}')\")" >> $GITHUB_OUTPUT
+          echo "encoded_url=$(node -p "encodeURIComponent('${{ github.event.inputs.public_url }}')")" >> $GITHUB_OUTPUT
       - name: Cache node_modules
         id: cache-modules
         uses: actions/cache@v2
