Toggle metadata time representation

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@fontsource/open-sans": "4.5.2",
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
-    "@vidispine/vdt-api": "^23.1.0",
+    "@vidispine/vdt-api": "23.2.0",
+    "@vidispine/vdt-js": "23.2.0",
     "clsx": "1.1.1",
     "codemirror": "5.65.9",
     "d3-graphviz": "2.6.1",
