--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "scripts": {
     "start": "VITE_VIDISPINE_URL=${VIDISPINE_URL} VITE_GIT_COMMIT=${npm_package_version} vite",
     "build": "GENERATE_SOURCEMAP=false VITE_GIT_COMMIT=${npm_package_version} vite build && cp build/index.html build/404.html",
+    "gh-pages-clean": "gh-pages-clean",
+    "gh-pages": "gh-pages",
     "predocker:build": "PUBLIC_URL=/ npm run build",
     "docker:build": "docker build -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" .",
     "docker:push": "docker push \"${npm_package_name:1}:${npm_package_version}\" && docker push \"${npm_package_name:1}:latest\"",
