--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "runtimeExecutable": "npm",
       "skipFiles": ["<node_internals>/**"],
       "type": "node",
-      "env": { "VIDISPINE_URL": "${input:vidicoreUrl}"},
+      "env": { "VITE_VIDISPINE_URL": "${input:vidicoreUrl}"},
       "stopOnEntry": true
     }
   ],
