--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,10 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
       - name: Configure npm
         run: npm config set script-shell bash
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Docker login
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USER }} --password-stdin
         shell: bash
@@ -29,7 +33,7 @@ jobs:
         run: npm install
         shell: bash
       - name: Build the Docker image
-        run: npm run docker:build
+        run: npm run docker:buildx
         shell: bash
       - name: Push the Docker image
         run: npm run docker:push
