--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '20'
       - name: Cache node_modules
         id: cache-modules
         uses: actions/cache@v2
@@ -33,9 +33,6 @@ jobs:
         run: npm install
         shell: bash
       - name: Build the Docker image
-        run: npm run docker:buildx
-        shell: bash
-      - name: Push the Docker image
-        run: npm run docker:push
+        run: npm run docker:buildx:push
         shell: bash
 
