--- a/package.json
+++ b/package.json
@@ -45,8 +45,9 @@
     "gh-pages-clean": "gh-pages-clean",
     "gh-pages": "gh-pages",
     "predocker:build": "PUBLIC_URL=/ GENERATE_SOURCEMAP=false npm run build",
+    "predocker:buildx:push": "PUBLIC_URL=/ GENERATE_SOURCEMAP=false npm run build",
     "docker:build": "docker build --platform=linux/amd64,linux/arm64 -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" .",
-    "docker:buildx": "docker buildx build --platform=linux/amd64,linux/arm64 -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" .",
+    "docker:buildx:push": "docker buildx build --platform=linux/amd64,linux/arm64 -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" --push .",
     "docker:push": "docker push \"${npm_package_name:1}:${npm_package_version}\" && docker push \"${npm_package_name:1}:latest\"",
     "docker:run": "docker run --name \"${npm_package_name/@vidispine\\//vidispine_}\" --rm -dti -e VIDISPINE_URL=$VIDISPINE_URL -e NGINX_RESOLVER=1.1.1.1 -p 80:80 \"${npm_package_name:1}:${npm_package_version}\"",
     "docker:stop": "docker stop \"${npm_package_name/@vidispine\\//vidispine_}\""
