--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@vidispine/vdt-js": "23.4.0",
     "clsx": "1.1.1",
     "codemirror": "5.65.9",
-    "d3-graphviz": "2.6.1",
+    "d3-graphviz": "5.4.0",
     "events": "^3.3.0",
     "history": "5.1.0",
     "immutability-helper": "3.1.1",
@@ -36,7 +36,7 @@
   "resolutions": {
     "codemirror": "5.65.9",
     "eslint": "7.11.0",
-    "axios": ">=0.27.2",
+    "axios": ">=0.28.1",
     "d3-color": ">=3.1.0"
   },
   "overrides": {
@@ -44,6 +44,9 @@
       "react": "$react",
       "react-dom": "$react-dom",
       "react-redux": "^8"
+    },
+    "@vidispine/vdt-api": {
+      "axios": ">=0.28.1"
     }
   },
   "scripts": {
@@ -68,9 +71,9 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "1.7.0",
-    "gh-pages": "3.2.3",
+    "gh-pages": "6.1.1",
     "sass": "^1.64.2",
-    "vite": "^4.4.9"
+    "vite": "4.5.3"
   },
   "browserslist": [
     ">0.2%",
