--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@fontsource/open-sans": "4.5.2",
     "@material-ui/core": "4.12.3",
     "@material-ui/icons": "4.11.2",
-    "@vidispine/vdt-api": "23.4.0",
-    "@vidispine/vdt-js": "23.4.0",
+    "@vidispine/vdt-api": "24.2.0-pre.1",
+    "@vidispine/vdt-js": "24.2.0-pre.1",
     "clsx": "1.1.1",
     "codemirror": "5.65.9",
     "d3-graphviz": "5.4.0",
