set static assets at /admin-tool for container

--- a/package.json
+++ b/package.json
@@ -55,10 +55,10 @@
     "postbuild": "cp build/index.html build/404.html",
     "gh-pages-clean": "gh-pages-clean",
     "gh-pages": "gh-pages",
-    "predocker:build": "PUBLIC_URL=/ GENERATE_SOURCEMAP=false npm run build",
-    "predocker:buildx:push": "PUBLIC_URL=/ GENERATE_SOURCEMAP=false npm run build",
-    "docker:build": "docker build --platform=linux/amd64,linux/arm64 -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" .",
-    "docker:buildx:push": "docker buildx build --platform=linux/amd64,linux/arm64 -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" --push .",
+    "predocker:buildx": "GENERATE_SOURCEMAP=false npm run build",
+    "predocker:buildx:push": "GENERATE_SOURCEMAP=false npm run build",
+    "docker:buildx": "docker buildx build --build-arg PUBLIC_URL --platform=linux/amd64,linux/arm64 -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" .",
+    "docker:buildx:push": "docker buildx build --platform=linux/amd64,linux/arm64 --build-arg PUBLIC_URL -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" --push .",
     "docker:push": "docker push \"${npm_package_name:1}:${npm_package_version}\" && docker push \"${npm_package_name:1}:latest\"",
     "docker:run": "docker run --name \"${npm_package_name/@vidispine\\//vidispine_}\" --rm -dti -e VIDISPINE_URL=$VIDISPINE_URL -e NGINX_RESOLVER=1.1.1.1 -p 80:80 \"${npm_package_name:1}:${npm_package_version}\"",
     "docker:stop": "docker stop \"${npm_package_name/@vidispine\\//vidispine_}\""
