--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,6 +33,6 @@ jobs:
         run: npm install
         shell: bash
       - name: Build the Docker image
-        run: npm run docker:buildx:push
+        run: PUBLIC_URL=/admin-tool npm run docker:buildx:push
         shell: bash
 
