--- a/.github/workflows/build-with-public-url.yml
+++ b/.github/workflows/build-with-public-url.yml
@@ -11,25 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
       - name: Set artifact vars
         id: artifact-vars
         run: |
           echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
           echo "encoded_url=$(node -p "encodeURIComponent('${{ github.event.inputs.public_url }}')")" >> $GITHUB_OUTPUT
-      - name: Cache node_modules
-        id: cache-modules
-        uses: actions/cache@v3
-        with:
-          path: |
-            node_modules
-            */*/node_modules
-          key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
-        if: steps.cache-modules.outputs.cache-hit != 'true'
-        run: npm install
+        run: npm ci
       - name: Build site
         run: PUBLIC_URL=${PUBLIC_URL} GENERATE_SOURCEMAP=false npm run build
         env:
