--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,6 @@ services:
     environment:
       VIDISPINE_URL: ${VIDISPINE_URL:-http://host.docker.internal:8080}
       NGINX_RESOLVER: 127.0.0.11
+      CONTAINER_PROXY: true
     ports:
       - ${ADMINTOOL_PORT:-80}:80
-
