--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ VITE_VERSION=$npm_package_version
 VITE_NAME=$npm_package_name
 FAST_REFRESH=false
 VITE_VIDISPINE_URL=$VIDISPINE_URL
+# BASE_URL='http://localhost:3000/admin-tool'
