--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "docker:buildx": "docker buildx build --build-arg BASE_URL --platform=linux/amd64,linux/arm64 -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" .",
     "docker:buildx:push": "docker buildx build --platform=linux/amd64,linux/arm64 --build-arg BASE_URL -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" --push .",
     "docker:push": "docker push \"${npm_package_name:1}:${npm_package_version}\" && docker push \"${npm_package_name:1}:latest\"",
-    "docker:run": "docker run --name \"${npm_package_name/@vidispine\\//vidispine_}\" --rm -dti -e VIDISPINE_URL=$VIDISPINE_URL -e NGINX_RESOLVER=1.1.1.1 -p 80:80 \"${npm_package_name:1}:${npm_package_version}\"",
+    "docker:run": "docker run --name \"${npm_package_name/@vidispine\\//vidispine_}\" --rm -dti -e VIDISPINE_URL=$VIDISPINE_URL -e NGINX_RESOLVER=1.1.1.1 -e CONTAINER_PROXY=$CONTAINER_PROXY -p 80:80 \"${npm_package_name:1}:${npm_package_version}\"",
     "docker:stop": "docker stop \"${npm_package_name/@vidispine\\//vidispine_}\"",
     "prettier:check": "prettier . --check",
     "prettier:write": "prettier . --write",
