--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "postbuild": "cp build/index.html build/404.html",
     "gh-pages-clean": "gh-pages-clean",
     "gh-pages": "gh-pages",
-    "predocker:buildx": "GENERATE_SOURCEMAP=false npm run build",
-    "predocker:buildx:push": "GENERATE_SOURCEMAP=false npm run build",
+    "predocker:buildx": "npm run build",
+    "predocker:buildx:push": "npm run build",
     "docker:buildx": "docker buildx build --build-arg BASE_URL --platform=linux/amd64,linux/arm64 -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" .",
     "docker:buildx:push": "docker buildx build --platform=linux/amd64,linux/arm64 --build-arg BASE_URL -t \"${npm_package_name:1}:latest\" -t \"${npm_package_name:1}:${npm_package_version}\" --push .",
     "docker:push": "docker push \"${npm_package_name:1}:${npm_package_version}\" && docker push \"${npm_package_name:1}:latest\"",
