--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,6 +5,8 @@ on:
 
 jobs:
   build_and_publish:
+    permissions:
+      pages: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
